--- a/Kitodo/src/main/webapp/pages/incMeta/metadata.xhtml
+++ b/Kitodo/src/main/webapp/pages/incMeta/metadata.xhtml
@@ -24,13 +24,17 @@
         <h:panelGroup id="metadataTable" rendered="#{!empty Metadaten.myMetadaten}">
 
             <p:dataTable value="#{Metadaten.myMetadaten}" var="item">
-
+                <f:facet name="header">
+                    #{msgs.metadaten}
+                </f:facet>
                 <p:column style="width:20%;">
                     <h:outputText value="#{item.typ}"/>
                 </p:column>
 
                 <p:column>
-                    <p:inputTextarea value="#{item.value}" rows="2" style="width:98%;"/>
+                    <p:inputTextarea value="#{item.value}" rows="2" style="width:98%;">
+                        <p:ajax event="blur" />
+                    </p:inputTextarea>
                 </p:column>
 
                 <p:column style="width:64px;text-align: center">
@@ -69,9 +73,6 @@
                     </p:commandButton>
                 </p:column>
             </p:row>
-
         </p:panelGrid>
-
     </h:form>
-
 </ui:composition>
