--- a/Kitodo/src/main/webapp/pages/projectEditDetail.xhtml
+++ b/Kitodo/src/main/webapp/pages/projectEditDetail.xhtml
@@ -18,30 +18,30 @@
     <p:panelGrid columns="2" cellpadding="10" layout="grid">
         <p:row>
             <div>
-                <p:outputLabel for="title" value="#{msgs.titel}:" />
+                <p:outputLabel for="title" value="#{msgs.titel}" />
                 <p:inputText id="title" placeholder="Titel" class="input" value="#{ProjekteForm.myProjekt.title}"/>
             </div>
             <div>
-                <p:outputLabel for="pages" value="#{msgs.numberImages}:" />
+                <p:outputLabel for="pages" value="#{msgs.numberImages}" />
                 <p:inputText id="pages" placeholder="10" class="input" value="#{ProjekteForm.myProjekt.numberOfPages}"/>
             </div>
             <div>
-                <p:outputLabel for="band" value="#{msgs.numberVolumes}:" />
+                <p:outputLabel for="band" value="#{msgs.numberVolumes}" />
                 <p:inputText id="band" placeholder="1" class="input" value="#{ProjekteForm.myProjekt.numberOfVolumes}"/>
             </div>
         </p:row>
         <p:row>
             <div>
-                <p:outputLabel for="startdate" value="#{msgs.startdate}:" />
-                <p:calendar id="startdate" value="#{ProjekteForm.myProjekt.startDate}" showOn="button" inputStyleClass="input-with-button" />
+                <p:outputLabel for="startdate" value="#{msgs.startdate}" />
+                <p:calendar id="startdate" class="input" value="#{ProjekteForm.myProjekt.startDate}" showOn="button"/>
             </div>
             <div>
-                <p:outputLabel for="enddate" value="#{msgs.enddate}:" />
-                <p:calendar id="enddate" value="#{ProjekteForm.myProjekt.endDate}" showOn="button" inputStyleClass="input-with-button"/>
+                <p:outputLabel for="enddate" value="#{msgs.enddate}" />
+                <p:calendar id="enddate" class="input" value="#{ProjekteForm.myProjekt.endDate}" showOn="button"/>
             </div>
             <div>
-                <h:outputText value="#{msgs.projectIsArchived}" />
-                <p:selectBooleanCheckbox value="#{ProjekteForm.myProjekt.projectIsArchived}" />
+                <p:outputLabel for="projectIsArchived" value="#{msgs.projectIsArchived}" />
+                <p:selectBooleanCheckbox id="projectIsArchived" class="input" value="#{ProjekteForm.myProjekt.projectIsArchived}" />
             </div>
         </p:row>
     </p:panelGrid>
