--- a/Kitodo/src/main/webapp/pages/incMeta/metadata.xhtml
+++ b/Kitodo/src/main/webapp/pages/incMeta/metadata.xhtml
@@ -19,6 +19,8 @@
 
     <h:form id="metadata">
 
+        <p:growl id="growl" showDetail="true"/>
+
         <p:messages id="messagesMetadata" closable="true"/>
 
         <h:panelGroup id="metadataTable" rendered="#{!empty Metadaten.myMetadaten}">
