--- a/Kitodo/src/main/webapp/pages/incMeta/metadataStructureView.xhtml
+++ b/Kitodo/src/main/webapp/pages/incMeta/metadataStructureView.xhtml
@@ -18,16 +18,14 @@
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
     xmlns:p="http://primefaces.org/ui"
 >
-    <p:tree value="#{Metadaten.treeNotes}" var="element"
+    <p:tree value="#{Metadaten.treeNodes}" var="element"
             selectionMode="single"
-            selection="#{Metadaten.selectedTreeNote}"
+            selection="#{Metadaten.selectedTreeNode}"
             style="width:99%;height:100%;">
         <p:ajax event="select" listener="#{Metadaten.onNodeSelect}"
                 update="tabView:metadata"/>
-
         <p:treeNode expandedIcon="ui-icon-document" collapsedIcon="ui-icon-document">
-            <!--TODO use localized name here, maybe by using getNameByLanguage(language)-->
-            <h:outputText value="#{element.type.name}"/>
+            <h:outputText value="#{element.type.getNameByLanguage(SpracheForm.locale)}"/>
         </p:treeNode>
     </p:tree>
 </ui:composition>
