--- a/Kitodo/src/main/webapp/pages/incMeta/metadataStructureView.xhtml
+++ b/Kitodo/src/main/webapp/pages/incMeta/metadataStructureView.xhtml
@@ -27,5 +27,6 @@
         <p:treeNode expandedIcon="ui-icon-document" collapsedIcon="ui-icon-document">
             <h:outputText value="#{element.type.getNameByLanguage(SpracheForm.locale)}"/>
         </p:treeNode>
+        <!--TODO think about to use diffent Icons according to element types-->
     </p:tree>
 </ui:composition>
