fixed issues displaying file groups popup

--- a/Kitodo/src/main/webapp/pages/projectEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/projectEdit.xhtml
@@ -42,4 +42,7 @@
             </h:form>
         </p:panel>
     </ui:define>
+    <ui:define name="dialog">
+        <ui:include src="/pages/projectEditMetsPopup.xhtml"/>
+    </ui:define>
 </ui:composition>
