--- a/Kitodo/src/main/webapp/pages/incMeta/metadataCenter.xhtml
+++ b/Kitodo/src/main/webapp/pages/incMeta/metadataCenter.xhtml
@@ -21,14 +21,19 @@
 
     <p:growl id="growl" showDetail="true"/>
 
-    <div align="right">
-        <p:button value="#{msgs.validieren}" icon="ui-icon-arrowrefresh-1-w" disabled="true"/>
-        <p:button value="#{msgs.zurueck}" outcome="/pages/ProzessverwaltungAlle" icon="ui-icon-close"/>
-        <p:commandButton value="#{msgs.speichern}" action="#{Metadaten.saveMetadataToXml}" icon="ui-icon-disk"
-                         update="growl"/>
-        <p:commandButton value="#{msgs.speichernZurueck}" action="#{Metadaten.saveMetadataToXmlAndGoToProcessPage}"
-                         icon="ui-icon-extlink" update="growl"/>
-    </div>
+    <h:form id="buttons">
+        <p:blockUI block="buttons,tabView" trigger="saveBtn,saveAndBackBtn"/>
+        <div align="right">
+            <p:button value="#{msgs.validieren}" icon="ui-icon-arrowrefresh-1-w" disabled="true"/>
+            <p:button id="backBtn" value="#{msgs.zurueck}" outcome="/pages/ProzessverwaltungAlle" icon="ui-icon-close"/>
+            <p:commandButton id="saveBtn" value="#{msgs.speichern}" action="#{Metadaten.saveMetadataToXml}"
+                             icon="ui-icon-disk"
+                             update="growl"/>
+            <p:commandButton id="saveAndBackBtn" value="#{msgs.speichernZurueck}"
+                             action="#{Metadaten.saveMetadataToXmlAndGoToProcessPage}"
+                             icon="ui-icon-extlink" update="growl"/>
+        </div>
+    </h:form>
 
     <p:tabView id="tabView">
         <p:tab title="#{msgs.paginierung}">
@@ -41,4 +46,5 @@
             <ui:include src="metadata.xhtml"/>
         </p:tab>
     </p:tabView>
+
 </ui:composition>
