Update breadcrumb navigation on new pages

--- a/Kitodo/src/main/webapp/pages/productionTemplates.xhtml
+++ b/Kitodo/src/main/webapp/pages/productionTemplates.xhtml
@@ -101,4 +101,8 @@
             </p:dataTable>
         </p:panel>
     </ui:define>
+    <ui:define name="breadcrumbs">
+        <li><a href=""><h:outputText value="#{msgs.prozessvorlagen}"/></a></li>
+        <li><h:link value="#{msgs.startseite}" outcome="start"/></li>
+    </ui:define>
 </ui:composition>
