--- a/Kitodo/src/main/webapp/pages/projectEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/projectEdit.xhtml
@@ -28,7 +28,7 @@
                     <h3>#{msgs.projektBearbeiten}</h3>
                     <p:commandButton value="#{msgs.speichern}" action="#{ProjekteForm.save()}" icon="fa fa-floppy-o fa-lg" styleClass="button-filled-blue"/>
                 </p:panel>
-                <p:tabView>
+                <p:tabView id="tabs">
                     <p:tab title="#{msgs.details}">
                         <ui:include src="projectEditDetail.xhtml"/>
                     </p:tab>
