Add temporary navigation switch to ProjekteForm

--- a/Kitodo/src/main/webapp/pages/projectEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/projectEdit.xhtml
@@ -25,7 +25,10 @@
         <p:panel id="listWrapper">
             <h:form id="projectEditForm">
                 <p:panel styleClass="content-header">
-                    <h3>#{msgs.projektBearbeiten}</h3>
+                    <h3>
+                        <h:outputText value="#{msgs.projektBearbeiten}" rendered="#{ProjekteForm.itemId ne 0}"/>
+                        <h:outputText value="#{msgs.newProject}" rendered="#{ProjekteForm.itemId eq 0}"/>
+                    </h3>
                     <p:commandButton value="#{msgs.speichern}" action="#{ProjekteForm.save()}" icon="fa fa-floppy-o fa-lg" styleClass="button-filled-blue"/>
                 </p:panel>
                 <p:tabView id="tabs">
