--- a/Kitodo/src/main/webapp/pages/projectEditMetsPopup.xhtml
+++ b/Kitodo/src/main/webapp/pages/projectEditMetsPopup.xhtml
@@ -55,6 +55,7 @@
                         </p:row>
                     </p:panelGrid>
                     <p:commandButton action="#{ProjekteForm.filegroupSave()}"
+                                     update="projectEditForm"
                                      oncomplete="PF('editFileGroupDialog').hide()"
                                      value="#{msgs.uebernehmen}"
                                      styleClass="button-filled-blue right"/>
